# Lumi-2025.-Team-4

./: README.md  requirements.txt  run.py  test_api.py
app/: .env  __init__.py  config.py
app/controllers/: device_controller.py  message_controller.py
app/models/: __init__.py  device.py  message.py
app/routes/: device_routes.py  message_routes.py
codeArd/Button/: Button.ino
codeArd/send_message/: send_message.ino
codeArd/test TFT/sketch_jul15a/testTFT/: testTFT.ino
codeArd/test1/: test1.ino
codeArd/test2/: test2.ino
esp32/: demoESP32.ino  thietbi1.ino  thietbi2.ino
esp32/demo/: thietbi1.ino  thietbi2.ino
esp32/device1/: device1.ino
esp32/device2/: device2.ino
esp32/final/: Final.ino
esp32/final/final/: final.ino
esp32/something/: something.ino
libraries/: lv_conf.h
libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_ConversationScreen.c  ui_ConversationScreen.h  ui_HelpScreen.c  ui_HelpScreen.h  ui_MainScreen.c  ui_MainScreen.h  ui_MessScreen.c  ui_MessScreen.h  ui_comp.c  ui_comp.h  ui_comp_bubblechat.c  ui_comp_bubblechat.h  ui_comp_conversation.c  ui_comp_conversation.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_idconversation.c  ui_comp_idconversation.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_chat_24dp_000000_fill0_wght300_grad0_opsz24_png.c  ui_img_help_24dp_000000_fill0_wght300_grad0_opsz24_png.c
test/: test.ino
ui/: ui.ino
